--- a/app/views/layouts/navbar.ejs
+++ b/app/views/layouts/navbar.ejs
@@ -1,1 +1,21 @@
-<h1>This is Navbar</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>navbar</title>
+</head>
+<style type="text/css">
+.bg-mynav {
+    background-color: #2c3e50;
+  }
+</style>
+
+
+    <nav class="navbar navbar-dark bg-mynav">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Man-Power</a>
+        </div>
+      </nav>
+
+      
