--- a/app/views/layouts/navbar.ejs
+++ b/app/views/layouts/navbar.ejs
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>navbar</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>navbar</title>
+  
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    
 </head>
-<style type="text/css">
-.bg-mynav {
-    background-color: #2c3e50;
-  }
-</style>
+
 
 <body>
     <nav class="navbar navbar-dark bg-mynav">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Man-Power</a>
+          <a class="navbar-brand" >IMPACT</a>
+    <a class="btn btn-secondary" href="/manpower">Manpower</a>
+    <a class="btn btn-secondary" href="/application">Application</a>
+
+
         </div>
       </nav>
 
       <div class="container">
         <div class="d-flex bd-highlight mb-3">
-          <div class="me-auto p-2 bd-highlight"><h2>list</div>
+          <div class="me-auto p-2 bd-highlight"><h2></div>
           <div class="p-2 bd-highlight">
-            <button type="button" class="btn btn-secondary" onclick="getData()">getData</button>
+            
           </div>
           <div class="p-2 bd-highlight">
-            <button type="button" class="btn btn-secondary" onclick="createData() "><a href="/add">addData</a> </button>
+           
           </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
 </html>
