--- a/app/views/pages/manpower.ejs
+++ b/app/views/pages/manpower.ejs
@@ -7,8 +7,7 @@
     <title>manpower</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <script>
         async function getData() {
@@ -31,7 +30,7 @@
                 row.insertCell(2).innerHTML = (data.result[i].department);
                 row.insertCell(3).innerHTML = (data.result[i].section);
                 row.insertCell(4).innerHTML = (data.result[i].positionRequired);
-                row.insertCell(5).innerHTML = (data.result[i].no);
+                row.insertCell(5).innerHTML = (data.result[i].numberOrder);
 
 
 
@@ -67,6 +66,8 @@
     <form >
     </div>
 
+    <h1>ManPower</h1>
+    <a class="btn btn-secondary" href="/add">addData</a>
     <div class="card-body">
         <% if(data.length){ %>
         <table class="table">
@@ -77,7 +78,7 @@
                     <th scope="col">department</th>
                     <th scope="col">section</th>
                     <th scope="col">positionRequired</th>
-                    <th scope="col">no</th>
+                    <th scope="col">numberOrder</th>
                     <th width="200px">Action</th>
                 </tr>
             </thead>
@@ -89,7 +90,7 @@
                     <td><%= data[i].department %></td>
                     <td><%= data[i].section %></td>
                     <td><%= data[i].positionRequired %></td>
-                    <td><%= data[i].no %></td>
+                    <td><%= data[i].numberOrder %></td>
                     <td>
                         <a href="/edit/<%= data[i].manPowerID %>" class="btn btn-success edit">Edit</a>
                         <a onclick="DeleteData('<%= data[i].manPowerID %>')" class="btn btn-danger delete">Delete</a>
