--- a/app/views/layouts/navbar.ejs
+++ b/app/views/layouts/navbar.ejs
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-dark bg-mynav">
-        <div class="container-fluid">
+        <div classd="container-fluid">
           <a class="navbar-brand" href="#">Man-Power</a>
         </div>
       </nav>
@@ -22,10 +22,10 @@
         <div class="d-flex bd-highlight mb-3">
           <div class="me-auto p-2 bd-highlight"><h2>list</div>
           <div class="p-2 bd-highlight">
-            <button type="button" class="btn btn-secondary" onclick="getData()">getData</button>
+           
           </div>
           <div class="p-2 bd-highlight">
-            <button type="button" class="btn btn-secondary" onclick="createData() "><a href="/add">addData</a> </button>
+         
           </div>
 </body>
 </html>
