--- a/app/views/pages/create-contractAddress.ejs
+++ b/app/views/pages/create-contractAddress.ejs
@@ -37,7 +37,7 @@
     <label for="areaEN"><b>อำเภอ (อังกฤษ):</b></label><br>
     <input type="text" id="areaEN" name="areaEN" value=""><br>
     
-    <label for="provinceEN"><b>จังหวัด (อังกฤษ):</b></label><br>
+    <label for="areaEN"><b>จังหวัด (อังกฤษ):</b></label><br>
     <input type="text" id="provinceEN" name="provinceEN" value=""><br>
     
     <label for="postalCodeEN"><b>รหัสไปรษณีย์ (อังกฤษ):</b></label><br>
@@ -63,7 +63,7 @@
     <br>
             
     <button class="next-3 next">Next</button>
-    <button type="button" class="btn btn-secondary" onclick="createData() "><a>addData</a> </button>
+    <button type="button" class="btn btn-secondary" onclick="createData3() "><a>addData</a> </button>
    
     </div>
 </form>
