--- a/app/views/pages/application.ejs
+++ b/app/views/pages/application.ejs
@@ -13,7 +13,7 @@
        
         async function DeleteData(id) {
 
-            let response = await fetch(`http://localhost:8080/api/manpower/${id}`, {
+            let response = await fetch(`http://localhost:8080/api/application/${id}`, {
                 method: 'delete',
             
             })
